# File-Based-KV-Database

./: README.md  测试用例Del_Get_Set.docx  测试用例Expire.docx
Stage-Last/include/: Application.h  KVDBHandler.h  LRU.h
Stage0-文件读写/: CMakeLists.txt  Makefile.win  file_handler.cpp  file_handler.h  main.cpp  小作业.dev  小作业.layout
Stage1/: CMakeLists.txt  v1.0.cpp
Stage1-基本功能实现/: main.cpp  v1.0.cpp
Stage2/: CMakeLists.txt
Stage2-内存索引与过期删除/: main.cpp
Stage3-LRU缓存/: CMakeLists.txt  main.cpp
Stage3-bug修复与模块化/: CMakeLists.txt  main.cpp
Stage3-bug修复与模块化/include/: Application.h  KVDBHandler.h  LRU.h
Stage4-高并发/: CMakeLists.txt  main.cpp
Stage4-高并发/include/: KVDBHandler.h  application.h  sever.h
Stage5-数据分片集群/: CMakeLists.txt  main.cpp
Stage5-数据分片集群/include/: HashRing.h  LRU.h  Server.h  application.h  logger.h
